[package]
name = "send-email"
version = "1.0.0"
edition = "2021"
description = "Standalone send_email skill binary for SMTP and Feishu/Lark Mail"
authors = ["hagency"]

[[bin]]
name = "send_email"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "json"], default-features = false }
lettre = { version = "0.11", default-features = false, features = ["builder", "smtp-transport", "rustls-tls", "hostname"] }
base64 = "0.22"
