[package]
name = "skill-evolve"
version = "0.1.0"
edition = "2021"
description = "Online skill self-correction: detects plugin tool failures and suggests SKILL.md improvements"
authors = ["octos"]

[[bin]]
name = "skill-evolve"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "json"], default-features = false }
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }

[dev-dependencies]
tempfile = "3"

[package.metadata.release]
release = false
