[package]
name = "clock"
version = "1.0.0"
edition = "2021"
description = "Get current time in any timezone"
authors = ["hagency"]

[[bin]]
name = "clock"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
chrono-tz = "0.10"

[package.metadata.release]
release = false
