[package]
name = "voice-skill"
version = "1.0.0"
edition = "2021"
description = "Voice skill binary (ASR/TTS) using ominix-api"
authors = ["octos"]

[[bin]]
name = "voice-skill"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "json", "multipart"], default-features = false }
base64 = "0.22"

[package.metadata.release]
release = false
