[package]
name = "weather"
version = "1.0.0"
edition = "2021"
description = "Get current weather for any city worldwide"
authors = ["octos"]

[[bin]]
name = "weather"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "json"], default-features = false }

[package.metadata.release]
release = false
